# Bookshop-Management-System-Using-C-

./: .gitignore  CMakeLists.txt  README.md  app.rc  main.cpp
.github/workflows/: cmake-single-platform.yml
